#1744 Fixed pulls sidebar slightly overlapping a bigger ad if it was rendered

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -287,6 +287,16 @@ html, body, #map, #app, .wrapper {
     max-height: calc(100vh - (236px + 158px + 55px));
 }
 
+@media (min-height: 1000px) {
+    /** Pulls section of the sidebar, with a big ad loaded, when editing, without a speedrun enabled */
+    #pulls_sidebar.ad_loaded:not(.mobile,.embed) .edit .pulls_container:not(.has_speedrun) {
+        /** 280px is the height of the ad in the corner */
+        /** 24 px is the height of the report buttons */
+        /** 55 px is the height of the buttons at the top in the edit scenario */
+        max-height: calc(100vh - (266px + 158px + 55px));
+    }
+}
+
 /** Pulls section of the sidebar, adblock, when editing, without a speedrun enabled */
 #pulls_sidebar:not(.mobile,.embed) .edit .pulls_container:not(.has_speedrun) {
     /** 250px is the height of the ad in the corner */
@@ -321,6 +331,13 @@ html, body, #map, #app, .wrapper {
 /** Pulls section of the sidebar, with ad loaded, when viewing, without a speedrun enabled */
 #pulls_sidebar.ad_loaded .pulls_container:not(.has_speedrun) {
     max-height: calc(100vh - (250px + 163px));
+}
+
+@media (min-height: 1000px) {
+    /** Pulls section of the sidebar, with a big ad loaded, when viewing, without a speedrun enabled */
+    #pulls_sidebar.ad_loaded .pulls_container:not(.has_speedrun) {
+        max-height: calc(100vh - (280px + 163px));
+    }
 }
 
 /** Pulls section of the sidebar, adblock, when viewing, without a speedrun enabled */
